1. Сверстал, стилизовал и адаптировал FREE TRIAL (сначала думал что это часть футера почему то) 2. Сверстал, стилизовал и адаптировал footer 3. Конец 0_0

--- a/index.html
+++ b/index.html
@@ -723,9 +723,252 @@
                         </div>
                     </div>
         </section>
+        <!-- FREE-TRIAL section -->
+         <section class="section container section--primary">
+            <div class="section__body">
+                <div class="content plans freeTrial">
+                    <header class="content__header plans__header freeTrial__header">
+                        <h2 class="content__title freeTrial__title">
+                            Try Whitepace today
+                        </h2>
+                        <p class="plans__description freeTrial__description">
+                            Get started for free. <br>
+                            Add your whole team as your needs grow.
+                        </p>
+                        <a href="#" class="content__btn btn btn--arrowed freeTrial__btn">
+                            Try Taskey free
+                            <svg width="10" height="10" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M1 6H11" stroke="white" stroke-linecap="round" stroke-linejoin="round"/>
+                            <path d="M6 1L11 6L6 11" stroke="white" stroke-linecap="round" stroke-linejoin="round"/>
+                            </svg>
+                        </a>
+                    </header>
+                    <p>
+                        On a big team? Contact sales
+                    </p>
+                    <div class="freeTrial__contacts__wrapper">
+                        <a href="#" class="freeTrial__contacts__icon">
+                            <svg width="60" height="61" viewBox="0 0 60 61" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <g clip-path="url(#clip0_9_6413)">
+                                <path d="M46.4408 34.474C44.7903 26.1677 52.6744 21.2961 52.6744 21.2961C52.6744 21.2961 49.6026 16.852 44.4402 15.7088C39.2803 14.563 36.6978 15.9945 34.1203 17.0682C31.5403 18.1445 30.253 18.1445 30.253 18.1445C26.5299 18.1445 23.8082 14.2025 16.7146 15.9971C11.8277 17.2304 6.68315 22.8719 5.75365 29.6051C4.82415 36.3408 6.82997 44.9354 10.6973 51.5965C14.5646 58.2627 18.5042 60.768 21.3003 60.8401C24.0966 60.9096 26.8877 58.8369 30.253 58.3322C33.6209 57.8327 35.6936 59.5527 38.997 60.4822C42.2876 61.4092 43.4411 60.5492 47.2312 57.3255C51.0316 54.1018 54.4716 44.8557 54.4716 44.8557C54.4716 44.8557 48.0912 42.7854 46.4408 34.474Z" fill="white"/>
+                                <path d="M39.1334 10.3351C42.7896 6.60943 41.5512 0.841797 41.5512 0.841797C41.5512 0.841797 36.417 1.74301 32.977 5.32195C29.5397 8.90352 30.1087 14.5604 30.1087 14.5604C30.1087 14.5604 35.4772 14.0583 39.1334 10.3351Z" fill="white"/>
+                                </g>
+                                <defs>
+                                <clipPath id="clip0_9_6413">
+                                <rect width="60" height="60" fill="white" transform="translate(0 0.841797)"/>
+                                </clipPath>
+                                </defs>
+                            </svg>
+                        </a>
+                        <a href="#" class="freeTrial__contacts__icon">
+                            <svg width="60" height="61" viewBox="0 0 60 61" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <g clip-path="url(#clip0_9_6418)">
+                                <path d="M0 33.7363V51.2131L24.9507 54.7959V33.7363H0Z" fill="white"/>
+                                <path d="M24.9507 6.8916L0 10.4744V27.9512H24.9507V6.8916Z" fill="white"/>
+                                <path d="M59.9996 27.9505V1.5625L30.7412 5.76192V27.9505H59.9996Z" fill="white"/>
+                                <path d="M30.7412 55.9249L59.9996 60.1202V33.7363H30.7412V55.9249Z" fill="white"/>
+                                </g>
+                                <defs>
+                                <clipPath id="clip0_9_6418">
+                                <rect width="60" height="60" fill="white" transform="translate(0 0.841797)"/>
+                                </clipPath>
+                                </defs>
+                            </svg>
+                        </a>
+                        <a href="#" class="freeTrial__contacts__icon">
+                            <svg width="60" height="61" viewBox="0 0 60 61" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <g clip-path="url(#clip0_9_6425)">
+                                <path d="M8.32884 20.2773C7.29504 20.2773 6.4179 20.6379 5.69688 21.3589C4.97585 22.0799 4.61523 22.9451 4.61523 23.9549V39.4596C4.61523 40.4947 4.97575 41.3711 5.69688 42.0922C6.4179 42.8133 7.29504 43.1739 8.32884 43.1739C9.36188 43.1739 10.2337 42.8134 10.9435 42.0922C11.652 41.3712 12.0072 40.4947 12.0072 39.4596V23.9549C12.0072 22.945 11.6467 22.0799 10.9255 21.3589C10.2044 20.6379 9.33866 20.2773 8.32884 20.2773Z" fill="white"/>
+                                <path d="M38.1846 6.35815L40.7448 1.63537C40.9128 1.32271 40.853 1.08295 40.5649 0.914352C40.2521 0.768976 40.0118 0.842641 39.8439 1.13014L37.2479 5.89067C34.9637 4.88073 32.5477 4.37485 30.0001 4.37485C27.4519 4.37485 25.0357 4.88084 22.7523 5.89067L20.1562 1.13014C19.9875 0.842641 19.7472 0.769627 19.4352 0.914352C19.1464 1.0837 19.0866 1.32271 19.2553 1.63537L21.8156 6.35815C19.2195 7.68205 17.1519 9.52583 15.6136 11.8935C14.0752 14.2625 13.3057 16.8513 13.3057 19.6644H46.6582C46.6582 16.8519 45.8886 14.263 44.3503 11.8935C42.8118 9.52583 40.7562 7.68205 38.1846 6.35815ZM23.3831 13.2275C23.1062 13.505 22.7755 13.6431 22.3911 13.6431C22.006 13.6431 21.682 13.505 21.4178 13.2275C21.1535 12.9513 21.0213 12.6219 21.0213 12.2362C21.0213 11.8518 21.1535 11.5218 21.4178 11.245C21.682 10.9687 22.0068 10.8306 22.3911 10.8306C22.7755 10.8306 23.1062 10.9687 23.3831 11.245C23.6593 11.5225 23.798 11.8518 23.798 12.2362C23.7973 12.6213 23.6586 12.9513 23.3831 13.2275ZM38.5809 13.2275C38.3161 13.505 37.9914 13.6431 37.6077 13.6431C37.2224 13.6431 36.8919 13.505 36.6155 13.2275C36.3388 12.9513 36.2007 12.6219 36.2007 12.2362C36.2007 11.8518 36.3388 11.5218 36.6155 11.245C36.8919 10.9687 37.2224 10.8306 37.6077 10.8306C37.9921 10.8306 38.316 10.9687 38.5809 11.245C38.8454 11.5225 38.9774 11.8518 38.9774 12.2362C38.9774 12.6213 38.8453 12.9513 38.5809 13.2275Z" fill="white"/>
+                                <path d="M13.4492 44.9755C13.4492 46.0823 13.8336 47.0193 14.6025 47.7881C15.372 48.557 16.3089 48.9414 17.4149 48.9414H20.0834L20.1199 57.1273C20.1199 58.161 20.4804 59.0388 21.2015 59.76C21.9225 60.4811 22.7883 60.8416 23.7975 60.8416C24.8307 60.8416 25.7083 60.4811 26.4295 59.76C27.1506 59.0388 27.5111 58.1611 27.5111 57.1273V48.9421H32.4869V57.1273C32.4869 58.161 32.8473 59.0388 33.5684 59.76C34.2895 60.4811 35.1665 60.8416 36.2004 60.8416C37.2335 60.8416 38.1112 60.4811 38.8323 59.76C39.5535 59.0388 39.9139 58.1611 39.9139 57.1273V48.9421H42.6183C43.6998 48.9421 44.6247 48.5576 45.395 47.7888C46.1637 47.0199 46.5483 46.083 46.5483 44.9763V20.9609H13.4492V44.9755Z" fill="white"/>
+                                <path d="M51.6709 20.2773C50.6609 20.2773 49.7958 20.6325 49.0747 21.341C48.3537 22.0507 47.9932 22.9225 47.9932 23.9549V39.4596C47.9932 40.4947 48.3536 41.3711 49.0747 42.0922C49.7958 42.8134 50.6616 43.1739 51.6709 43.1739C52.704 43.1739 53.5817 42.8134 54.3028 42.0922C55.0239 41.3711 55.3843 40.4947 55.3843 39.4596V23.9549C55.3843 22.9224 55.0239 22.0507 54.3028 21.341C53.5817 20.6325 52.704 20.2773 51.6709 20.2773Z" fill="white"/>
+                                </g>
+                                <defs>
+                                <clipPath id="clip0_9_6425">
+                                <rect width="60" height="60" fill="white" transform="translate(0 0.841797)"/>
+                                </clipPath>
+                                </defs>
+                            </svg>
+                        </a>
+                    </div>
+                </div>
+            </div>
+         </section>
       </main>
       <!-- FOOTER -->
-      
+      <footer class="footer container section--primary">
+        <div class="footer__inner">
+            <!-- main -->
+            <div class="footer__main">
+                <div class="footer__card">
+                    <ul class="footer__card__list footer__card__list--logo">
+                        <li class="footer__card__list__item footer__card__list__item--logo">
+                            <img 
+                            src="./assets/icons/footer_logo.png" 
+                            alt="" 
+                            class="footer__logo"
+                            width="191"
+                            height="34"
+                            >
+                        </li>
+                        <li class="footer__card__list__item">
+                            <p>
+                                whitepace was created for the new ways we live and work. We make a better workspace around the world
+                            </p>
+                        </li>
+                    </ul>
+                </div>
+                <div class="footer__card">
+                    <ul class="footer__card__list">
+                        <h5>
+                            Product
+                        </h5>
+                        <li class="footer__card__list__item">
+                            <a href="#" class="footer__link">
+                                Overview
+                            </a>
+                        </li>
+                        <li class="footer__card__list__item">
+                            <a href="#" class="footer__link">
+                                Pricing
+                            </a>
+                        </li>
+                        <li class="footer__card__list__item">
+                            <a href="#" class="footer__link">
+                                Customer stories
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="footer__card">
+                    <ul class="footer__card__list">
+                        <h5>
+                            Resources
+                        </h5>
+
+                        <li class="footer__card__list__item">
+                            <a href="#" class="footer__link">
+                                Blog
+                            </a>
+                        </li>
+                        <li class="footer__card__list__item">
+                            <a href="#" class="footer__link">
+                                Guides & tutorials
+                            </a>
+                        </li>
+                        <li class="footer__card__list__item">
+                            <a href="#" class="footer__link">
+                                Help center
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="footer__card">
+                    <ul class="footer__card__list">
+                        <h5>
+                            Company
+                        </h5>
+
+                        <li class="footer__card__list__item">
+                            <a href="#" class="footer__link">
+                                About us
+                            </a>
+                        </li>
+                        <li class="footer__card__list__item">
+                            <a href="#" class="footer__link">
+                                Careers
+                            </a>
+                        </li>
+                        <li class="footer__card__list__item">
+                            <a href="#" class="footer__link"> 
+                                Media kit
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="footer__card footer__card--call-to-action">
+                        <h5>
+                            Try It Today
+                        </h5>
+                        <p>
+                            Get started for free.
+                            Add your whole team as your needs grow.
+                        </p>
+                        <a href="#" class="btn btn-arrowed">
+                            Start today
+                        </a>
+                </div>
+            </div>
+            <!-- extra -->
+            <div class="footer__extra">
+                <ul class="footer__extra__list dropdown">
+                    <li class="footer__extra__item dropdown__item">
+                        <a href="" class="footer__link">
+                            English
+                            <i class="fa fa-angle-down"></i>
+                        </a>
+                        <ul class="dropdown__submenu">
+                            <li class="dropdown__submenu__item">
+                                <a href="#">A</a>
+                            </li>
+                            <li class="dropdown__submenu__item">
+                                <a href="#">B</a>
+                            </li>
+                            <li class="dropdown__submenu__item">
+                                <a href="#">C</a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="footer__extra__item">
+                        <a href="#" class="footer__link">
+                            Terms & privacy
+                        </a>
+                    </li>
+                    <li class="footer__extra__item">
+                        <a href="#" class="footer__link">
+                            Security
+                        </a>
+                    </li>
+                    <li class="footer__extra__item">
+                        <a href="#" class="footer__link">
+                            Status
+                        </a>
+                    </li>
+                    <li class="footer__extra__item">
+                        <p class="footer__copywright">
+                            ©2024 Whitepace LLC.
+                        </p>
+                    </li>
+                </ul>
+                <!-- socials list -->
+                 <ul class="footer__extra__list footer__extra__list--socials">
+                    <li class="footer__extra--socials__item">
+                        <a href="#" class="footer__link">
+                            <svg width="9" height="18" viewBox="0 0 9 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M2.5058 9.91715C2.44316 9.91715 1.06497 9.91715 0.438515 9.91715C0.104408 9.91715 0 9.79186 0 9.47863C0 8.64336 0 7.78722 0 6.95195C0 6.61784 0.12529 6.51343 0.438515 6.51343H2.5058C2.5058 6.45079 2.5058 5.23965 2.5058 4.67585C2.5058 3.84058 2.65197 3.04708 3.06961 2.31622C3.50812 1.56448 4.13457 1.06332 4.92807 0.770973C5.45012 0.583038 5.97216 0.499512 6.53596 0.499512H8.58237C8.87471 0.499512 9 0.624802 9 0.917145V3.29766C9 3.59 8.87471 3.71529 8.58237 3.71529C8.01856 3.71529 7.45476 3.71529 6.89095 3.73617C6.32715 3.73617 6.0348 4.00763 6.0348 4.59232C6.01392 5.21877 6.0348 5.82434 6.0348 6.47167H8.45708C8.79118 6.47167 8.91647 6.59696 8.91647 6.93107V9.45775C8.91647 9.79186 8.81207 9.89626 8.45708 9.89626C7.70534 9.89626 6.09745 9.89626 6.0348 9.89626V16.7037C6.0348 17.0587 5.93039 17.184 5.55452 17.184C4.67749 17.184 3.82135 17.184 2.94432 17.184C2.63109 17.184 2.5058 17.0587 2.5058 16.7455C2.5058 14.5529 2.5058 9.97979 2.5058 9.91715Z" fill="#F7F7EE"/>
+                            </svg>
+                        </a>   
+                    </li>
+                    <li class="footer__extra--socials__item">
+                        <a href="#" class="footer__link">
+                            <svg width="17" height="15" viewBox="0 0 17 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M17 2.57073C16.3678 2.84805 15.6942 3.03186 14.9919 3.12111C15.7144 2.68973 16.2658 2.01186 16.5251 1.1948C15.8514 1.59642 15.1077 1.88011 14.3151 2.03842C13.6754 1.35736 12.7638 0.935547 11.7693 0.935547C9.83981 0.935547 8.28644 2.50167 8.28644 4.42161C8.28644 4.69786 8.30981 4.96348 8.36719 5.21636C5.46975 5.07505 2.90594 3.68636 1.18362 1.57092C0.882937 2.09261 0.706563 2.68973 0.706563 3.33255C0.706563 4.53955 1.32812 5.60948 2.25463 6.22892C1.69469 6.2183 1.14538 6.05573 0.68 5.79967C0.68 5.8103 0.68 5.82411 0.68 5.83792C0.68 7.53155 1.88806 8.9383 3.47225 9.26236C3.18856 9.33992 2.87937 9.37711 2.5585 9.37711C2.33538 9.37711 2.11012 9.36436 1.89869 9.31761C2.35025 10.6978 3.63163 11.7125 5.15525 11.7454C3.9695 12.673 2.46394 13.2319 0.834063 13.2319C0.54825 13.2319 0.274125 13.2191 0 13.184C1.54381 14.1796 3.37344 14.748 5.3465 14.748C11.7597 14.748 15.266 9.43555 15.266 4.83067C15.266 4.67661 15.2607 4.52786 15.2533 4.38017C15.9449 3.8893 16.5261 3.27623 17 2.57073Z" fill="#F7F7EE"/>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer__extra--socials__item">
+                        <a href="#" class="footer__link">
+                            <svg width="15" height="16" viewBox="0 0 15 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M14.9962 15.3415V15.3408H14.9999V9.82231C14.9999 7.12261 14.4246 5.04297 11.3002 5.04297C9.79826 5.04297 8.79033 5.87558 8.37884 6.66492H8.3354V5.29501H5.37305V15.3408H8.45767V10.3665C8.45767 9.05679 8.70344 7.79032 10.3091 7.79032C11.8911 7.79032 11.9147 9.28501 11.9147 10.4505V15.3415H14.9962Z" fill="#F7F7EE"/>
+                                <path d="M0.223877 5.26758H3.35821V15.1183H0.223877V5.26758Z" fill="#F7F7EE"/>
+                                <path d="M1.79104 0.341797C0.802303 0.341797 0 1.14036 0 2.12449C0 3.10862 0.802303 3.92389 1.79104 3.92389C2.77979 3.92389 3.58209 3.10862 3.58209 2.12449C3.58147 1.14036 2.77916 0.341797 1.79104 0.341797V0.341797Z" fill="#F7F7EE"/>
+                            </svg>
+                        </a>
+                    </li>
+                 </ul>
+            </div>
+        </div>
+      </footer>
      <!-- модальное окно для бургер кнопки -->
      <dialog class="mobile-overlay " id="mobileOverlay">
         <!-- кнопка закрытия модального окна -->
